# OOP-Lab-4302

L3/: Task1.cpp  Task2.cpp  Task3.cpp
L4/: Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp
L5/: CMakeLists.txt
L5/Headers/: Employee.hpp  SavingsAccount.hpp  StudentInfo.hpp
L5/Sources/: Employee.cpp  SavingsAccount.cpp  StudentInfo.cpp  main.cpp
